--- a/a.css
+++ b/a.css
@@ -1,2 +1,2 @@
-  <body style="background-color:rgb(191, 189, 224);">  <app-root></app-root>
+  <body style="background-color:rgb(191, 189, 224);">  
 
