--- a/a.css
+++ b/a.css
@@ -1,2 +1,5 @@
   <body style="background-color:rgb(191, 189, 224);">  
-
+ #imagen {
+            width: 50%; 
+            height: auto; 
+        }
