--- a/a.css
+++ b/a.css
@@ -1,5 +1,6 @@
-  <body style="background-color:rgb(191, 189, 224);">  
+  <body style="background-color:rgb(191, 189, 224);" 
  #imagen {
             width: 10%; 
             height: auto; 
         }
+>
